# nin0-rs

./: .gitignore  Cargo.toml  Makefile  flake.nix  update-roles.pl
src/: lib.rs  packet.rs  rest.rs  socket.rs
