[package]
name = "nin0-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
json = { version = "0.12.4", optional = true }
reqwest = { version = "0.12.8", features = ["json"], optional = true }
rgb = { version = "0.8.50", optional = true }
secrecy = "0.10.3"
thiserror = { version = "1.0.65", optional = true }
websocket = { version = "0.27.1", optional = true }

[features]
roles = []
packet = ["roles", "dep:rgb"]
socket = ["dep:websocket", "dep:json", "packet"]
socket-util = ["socket", "dep:thiserror"]
rest = ["dep:reqwest"]
